infrastructure/kubernetes/traefik/dashboard-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: homelab-dashboard
  namespace: homelab
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`dash.homelab.pesulabs.net`)
      kind: Rule
      services:
        - name: homelab-dashboard
          port: 30800
  tls:
    certResolver: default
